--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "require": {
+        "beberlei/assert": "^3.2"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
     },
